# VitaFNAF1-old

./: .gitignore  CMakeLists.txt  README.md  build-unix.sh  build-vita.sh  decompiledFrames.txt  make-unix.sh  make-vita.sh  run-unix.sh
src/: engine.hpp  main.cpp
src/core/: asset_manager.cpp  asset_manager.hpp  core.hpp  delta_timer.cpp  delta_timer.hpp  misc.cpp  misc.hpp  platform_specific.cpp  platform_specific.hpp  scene_manager.cpp  scene_manager.hpp
src/core/game/: game.hpp
src/core/game/components/: components.hpp  sprite.cpp  sprite.hpp
src/core/game/scenes/: scene_loading.cpp  scene_loading.hpp  scene_menu.cpp  scene_menu.hpp  scene_warning.cpp  scene_warning.hpp
src/core/game/types/: audio.cpp  audio.hpp  image.cpp  scene.hpp  types.hpp
src/core/types/: asset.hpp  image.cpp  image.hpp  scene.hpp  types.hpp
src/rendering/: rendering.hpp  sdl_window.cpp  sdl_window.hpp
